BUG: module_v4skin | styles -> a little bit too much margin for the notification dropdown

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -211,7 +211,7 @@ footer {
 
 
 .userNotificationsDropdown {
-    margin: 15px 0 0 -15px;
+    margin: 15px 0 0 0;
     white-space: nowrap;
 
     @media (max-width: @screen-sm-max) {
